Updated outfit page to show layer for each item and also added "owned" boolean to Clothes so that clothes not owned can be removed from view